# sphinx-matlab

./: .pre-commit-config.yaml  pyproject.toml
learn-docs/: debug.py
learn-docs/source/: conf.py  index.rst
sphinx_matlab/: __init__.py  config.py  test.py
src/sphinx_matlab/: __init__.py  attributes.py  config.py  directives.py  extension.py  matobject.py  util_docstring.py  utils.py
src/sphinx_matlab/matlab/: __init__.py  matobject.py  objects.py  utils.py
test/autodoc2/: debug.py
test/autodoc2/docs/: conf.py  example.md  index.md  index.rst
test/autodoc2/src/: test.py
test/sphinx_matlab/: debug.py  ns.py
test/sphinx_matlab/docs/: conf.py  index.md
test/sphinx_matlab/src/: Account.m  argumentValidation.m  lineContinuations.m
