[tool.poetry]
name = "sphinx-matlab"
version = "0.1.0"
description = "Sphinx extension to (auto-)document MATLAB source files"
authors = ["Mark Shui Hu <watermarkhu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sphinx_matlab", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
sphinx-autodoc2 = "^0.4.2"
astroid = "2.15.8"
textmate-grammar-python = { path = "../textmate-grammar-python/", develop = true }
matlab-ns = { path = "../matlab-ns/", develop = true }

[tool.poetry.group.test.dependencies]
sphinx = "^7.0.0"
pytest = "^7.3.1"
pytest-icdiff = "^0.8"
furo = "^2023.9.10"
myst-parser = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
